--- a/home/wiki/App/Import/Import_overview.html
+++ b/home/wiki/App/Import/Import_overview.html
@@ -49,7 +49,7 @@
       <span class="mw-headline" id="Import_by_command-line">Import by command-line</span>
     </h2>
     <p>
-      The <a href="http://xowa.org/home/wiki/Dev/Command-line/Overview.html" id="xolnki_4" title="Dev/Command-line/Overview" class="xowa-visited">Dev/Command-line/Overview</a> page offers instructions on importing through the command-line.
+      The <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_4" title="Dev/Command-line" class="xowa-visited">Dev/Command-line</a> page offers instructions on importing through the command-line.
     </p>
     <ul>
       <li>
