--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -695,7 +695,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Search/Overview.html" id="xolnki_10" title="App/Search/Overview" class="xowa-visited">App/Search/Overview</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_10" title="App/Search" class="xowa-visited">App/Search</a>
       </dd>
     </dl>
     <ul>
