--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -1563,7 +1563,7 @@
         (add) Edit: Toolbar added for editing pages {contributed by Schnark}.
       </li>
       <li>
-        (add) Import: Sqlite database import available for category version 2. See: <a href="http://xowa.org/home/wiki/Archive/Import/Sqlite.html" id="xolnki_36" title="Archive/Import/Sqlite">Archive/Import/Sqlite</a>
+        (add) Import: Sqlite database import available for category version 2. See: <a href="http://xowa.org/home/wiki/Archive/Import/Sqlite.html" id="xolnki_36" title="Archive/Import/Sqlite" class="xowa-visited">Archive/Import/Sqlite</a>
       </li>
     </ul>
     <p>
@@ -1682,7 +1682,7 @@
     </p>
     <ul>
       <li>
-        (add) Import: Sqlite database import supported (command-line only) {requested by hidp123 et. al.}. See: <a href="http://xowa.org/home/wiki/Archive/Import/Sqlite.html" id="xolnki_37" title="Archive/Import/Sqlite">Archive/Import/Sqlite</a>
+        (add) Import: Sqlite database import supported (command-line only) {requested by hidp123 et. al.}. See: <a href="http://xowa.org/home/wiki/Archive/Import/Sqlite.html" id="xolnki_37" title="Archive/Import/Sqlite" class="xowa-visited">Archive/Import/Sqlite</a>
       </li>
       <li>
         (fix) Search: Search broken when not using search suggestions {detected by hidp123;anonymous7}.
