--- a/home/wiki/Dashboard/Import/Offline.html
+++ b/home/wiki/Dashboard/Import/Offline.html
@@ -1198,7 +1198,7 @@
             <li>
               <span class="reference-text">V2 is a category system that reproduces the exact category system in Wikipedia. However it requires additional files ("categorylinks") and takes up more space (as much as 10 GB for English Wikipedia)</span>
             </li>
-          </ul><span class="reference-text">For more info, see <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_7" title="App/Category">App/Category</a></span>
+          </ul><span class="reference-text">For more info, see <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_7" title="App/Category" class="xowa-visited">App/Category</a></span>
         </li>
         <li id="cite_note-import_now-1">
           <span class="mw-cite-backlink"><a href="#cite_ref-import_now_1-0">^</a></span> <span class="reference-text">Use this button to import the selected wiki now.</span>
