--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -508,7 +508,7 @@
           n
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2016-04-25
         </td>
         <td class='cell_center'>
           2016-03-05
@@ -645,10 +645,10 @@
           en.wikivoyage.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          2016-01-12
+          2016-04-07
         </td>
         <td class='cell_center'>
           2016-03-05
@@ -680,10 +680,10 @@
           en.wiktionary.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          2016-01-12
+          2016-04-07
         </td>
         <td class='cell_center'>
           2016-03-05
@@ -1297,7 +1297,7 @@
         <span class="mw-cite-backlink"><a href="#cite_ref-wiki_type_5-0">^</a></span> <span class="reference-text">Data storage for wiki. Can be either xdat or sqlite.</span>
       </li>
       <li id="cite_note-category_version-6">
-        <span class="mw-cite-backlink"><a href="#cite_ref-category_version_6-0">^</a></span> <span class="reference-text">Current category level of wiki. Can be either 1 or 2. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_3" title="App/Category">App/Category</a> for more info</span>
+        <span class="mw-cite-backlink"><a href="#cite_ref-category_version_6-0">^</a></span> <span class="reference-text">Current category level of wiki. Can be either 1 or 2. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_3" title="App/Category" class="xowa-visited">App/Category</a> for more info</span>
       </li>
       <li id="cite_note-search_version-7">
         <span class="mw-cite-backlink"><a href="#cite_ref-search_version_7-0">^</a></span> <span class="reference-text">Current search level of wiki. Can be either 1 or 2. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_4" title="App/Search" class="xowa-visited">App/Search</a> for more info</span>
