--- a/home/wiki/Help/About.html
+++ b/home/wiki/Help/About.html
@@ -46,7 +46,7 @@
           version:
         </td>
         <td>
-          3.4.2.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
+          3.4.4.1 <b>(<a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_2" title="Change log" class="xowa-visited">view changes</a>)</b>
         </td>
       </tr>
       <tr>
@@ -54,7 +54,7 @@
           build_date:
         </td>
         <td>
-          2016-04-16 21:59
+          2016-04-29 22:01
         </td>
       </tr>
       <tr>
@@ -419,6 +419,17 @@
         </td>
       </tr>
       <tr>
+        <td>
+          <a href="https://mustache.github.io/" rel="nofollow" class="external text">Mustache</a>
+        </td>
+        <td>
+          Template library
+        </td>
+        <td>
+          <a href="https://github.com/mustache/mustache.github.com/blob/master/LICENSE.md" rel="nofollow" class="external text">MIT</a>
+        </td>
+      </tr>
+      <tr>
         <td class='component_category' colspan='3'>
           Other application components
         </td>
@@ -680,6 +691,17 @@
         </td>
         <td>
           <a href="http://github.com/qbittorrent/qBittorrent/blob/master/COPYING" rel="nofollow" class="external text">GPLv2</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://obsproject.com/" rel="nofollow" class="external text">OBS</a>
+        </td>
+        <td>
+          Desktop video recording
+        </td>
+        <td>
+          <a href="https://github.com/jp9000/obs-studio/blob/master/COPYING" rel="nofollow" class="external text">GPLv2</a>
         </td>
       </tr>
       <tr>
