--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -183,7 +183,7 @@
     </p>
     <ul>
       <li>
-        v3.3.4 has a new auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search/Overview.html" id="xolnki_13" title="App/Search/Overview" class="xowa-visited">App/Search/Overview</a>
+        v3.3.4 has a new auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_13" title="App/Search" class="xowa-visited">App/Search</a>
       </li>
     </ul>
     <dl>
@@ -218,7 +218,7 @@
         v2.5.4 has changed online file downloads. Among other things, ImageMagick and Inkscape are no longer required. For more info, see <a href="http://xowa.org/home/wiki/App/Basics/Files.html" id="xolnki_18" title="App/Basics/Files" class="xowa-visited">Files</a>
       </li>
       <li>
-        v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search/Overview.html" id="xolnki_19" title="App/Search/Overview" class="xowa-visited">App/Search/Overview</a>
+        v2.4.2 has improved Search performance and v2.4.4 has added multi-wiki Search. For more info, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_19" title="App/Search" class="xowa-visited">App/Search</a>
       </li>
       <li>
         v2.4.1 has introduced major database layout changes. For more info, see <a href="http://xowa.org/home/wiki/Dev/Design/Database.html" id="xolnki_20" title="Dev/Design/Database">Database</a>
