--- a/home/wiki/Options/Search_suggest.html
+++ b/home/wiki/Options/Search_suggest.html
@@ -499,7 +499,7 @@ space=\s
           </li>
           <li id="cite_note-url_bar-symbols-6">
             <span class="mw-cite-backlink"><a href="#cite_ref-url_bar-symbols_6-0">^</a></span> <span class="reference-text">Define symbols for address-bar searches: (default is )<br>
-             This is an advanced option which allows custom definition of symbols for search terms. For more information on search queries, see <a href="http://xowa.org/home/wiki/App/Search/Overview.html" id="xolnki_2" title="App/Search/Overview" class="xowa-visited">App/Search/Overview</a> Note the following details:</span>
+             This is an advanced option which allows custom definition of symbols for search terms. For more information on search queries, see <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_2" title="App/Search" class="xowa-visited">App/Search</a> Note the following details:</span>
             <ul>
               <li>
                 <span class="reference-text">"\s" means space</span>
