--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -54,7 +54,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview">Import Overview</a><br>
+              <a href="http://xowa.org/home/wiki/App/Import/Import_overview.html" id="xolnki_6" title="App/Import/Import overview" class="xowa-visited">Import Overview</a><br>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia" class="xowa-visited">Simple Wikipedia</a>
@@ -80,7 +80,7 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Main_window/Overview.html" id="xolnki_10" title="App/UI/Main window/Overview">Using the Main Window</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Main_window.html" id="xolnki_10" title="App/UI/Main window" class="xowa-visited">Using the Main Window</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_11" title="App/UI/Find box" class="xowa-visited">Finding text on a page</a>
@@ -93,7 +93,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Search/Overview.html" id="xolnki_12" title="App/Search/Overview" class="xowa-visited">Overview</a>
+              <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_12" title="App/Search" class="xowa-visited">Overview</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Search/Address_bar.html" id="xolnki_13" title="App/Search/Address bar">Searching with the address bar</a>
@@ -175,7 +175,7 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Overview.html" id="xolnki_23" title="Dev/Command-line/Overview" class="xowa-visited">Overview</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_23" title="Dev/Command-line" class="xowa-visited">Overview</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_24" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
@@ -243,10 +243,10 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Category/Overview.html" id="xolnki_34" title="App/Category/Overview">Category</a>
+              <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_34" title="App/Category" class="xowa-visited">Category</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Scribunto/Overview.html" id="xolnki_35" title="App/Xtn/Mediawiki/Scribunto/Overview">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Scribunto.html" id="xolnki_35" title="App/Xtn/Mediawiki/Scribunto">Scribunto</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Mediawiki/Math/MathJax.html" id="xolnki_36" title="App/Xtn/Mediawiki/Math/MathJax">MathJax</a>
