--- a/home/wiki/Options/Search.html
+++ b/home/wiki/Options/Search.html
@@ -290,7 +290,7 @@ li.active a, li.active a:hover
           You can also test your configuration changes by going to this link: <a href="https://simple.wikipedia.org/wiki/Special:Search/Earth*" rel="nofollow" class="external free">https://simple.wikipedia.org/wiki/Special:Search/Earth*</a> or <a href="https://en.wikipedia.org/wiki/Special:Search/Earth*" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Special:Search/Earth*</a>
         </p>
         <p>
-          For more infomation, visit the <a href="http://xowa.org/home/wiki/App/Search/Overview.html" id="xolnki_2" title="App/Search/Overview" class="xowa-visited">Search help page</a><br>
+          For more infomation, visit the <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_2" title="App/Search" class="xowa-visited">Search help page</a><br>
         </p>
         <div style='float:right;'>
           <div style='float:right; margin-right:10px; margin-top:5px;'>
