--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,17 +82,11 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v3.4.4.1 features the following:
+      v3.5.1.1 features the following:
     </p>
     <ul>
       <li>
-        (Android) Fix for missing file-user.xowa database
-      </li>
-      <li>
-        (Package) Update German wikis (2016-04): <a href="https://archive.org/details/Xowa_dewiki_latest" rel="nofollow" class="external free">https://archive.org/details/Xowa_dewiki_latest</a>
-      </li>
-      <li>
-        (Desktop) Minor parser changes and fixes, including using non-ASCII strings for gsub find
+        (Desktop) Minor parser fixes for English Wiktionary
       </li>
     </ul>
     <p>
